--- a/reciclei_original_app-master/index.html
+++ b/reciclei_original_app-master/index.html
@@ -40,6 +40,9 @@
                 <button id="zoomIn">A+</button>
                 <button id="zoomOut">A-</button>
             </div>
+            <div class="menu-toggle" id="menu-toggle">
+                <i class='bx bx-menu'></i>
+            </div>
             <nav>
                 <a class="login1" href="pages/login/login.html">Login</a>
             </nav>
