--- a/reciclei_original_app-master/pages/cadastro.empresa/cadastroempresa.html
+++ b/reciclei_original_app-master/pages/cadastro.empresa/cadastroempresa.html
@@ -13,7 +13,7 @@
             <a href="#" class="logo">
                 <img src="/img/logo1.png" alt="logo">
             </a>
-
+           
             <nav class="navbar">
                 <a href="/index.html#home">Home</a>
                 <a href="/index.html#about">Sobre</a>
@@ -30,6 +30,9 @@
             <div class="zoom-controls">
                 <button id="zoomIn">A+</button>
                 <button id="zoomOut">A-</button>
+            </div>
+              <div class="menu-toggle" id="menu-toggle">
+                <i class='bx bx-menu'></i>
             </div>
         </section>
     </header>
