--- a/reciclei_original_app-master/pages/cadastro/cadastro.html
+++ b/reciclei_original_app-master/pages/cadastro/cadastro.html
@@ -32,6 +32,9 @@
                 <button id="zoomIn">A+</button>
                 <button id="zoomOut">A-</button>
             </div>
+              <div class="menu-toggle" id="menu-toggle">
+                <i class='bx bx-menu'></i>
+            </div>
         </section>
     </header>
 
