--- a/reciclei_original_app-master/pages/login/login.html
+++ b/reciclei_original_app-master/pages/login/login.html
@@ -36,6 +36,9 @@
                 <button id="zoomIn">A+</button>
                 <button id="zoomOut">A-</button>
             </div>
+              <div class="menu-toggle" id="menu-toggle">
+                <i class='bx bx-menu'></i>
+            </div>
         </section>
     </header>
     
