--- a/reciclei_original_app-master/pages/cadastro.empresa/cadastroempresa.html
+++ b/reciclei_original_app-master/pages/cadastro.empresa/cadastroempresa.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
     <title>Login Reciclei</title>
 </head>
 <body>
@@ -41,19 +43,22 @@
         <form action="/index.html" id="form">
             <h1>CADASTRE SUA EMPRESA <i class='bx bx-buildings' style="font-size: 2.8rem;"></i></h1>
             <div class="input-box">
-                <input type="text" id="name" placeholder="Nome Completo da Empresa" required/>
+                <input type="text" id="name" placeholder="Nome Completo da Empresa" />
                 <i class='bx bxs-user'></i>
             </div>
-            
+            <span class="error-message" id="name-error"></span>
+
             <div class="input-box">
-                <input type="text" id="CNPJ" placeholder="CNPJ" required/>
+                <input type="text" id="cnpj" placeholder="CNPJ" />
                 <i class='bx bx-id-card'></i>
             </div>
+            <span class="error-message" id="cnpj-error"></span>
             
             <div class="input-box">
-                <input type="email" id="email" placeholder="Email" required/>
+                <input type="email" id="email" placeholder="Email" />
                 <i class='bx bxs-envelope'></i>
             </div>
+            <span class="error-message" id="email-error"></span>
 
             <div class="input-box">
                 <input type="text" id="tel-fix" placeholder="Telefone Fixo"/>
@@ -61,29 +66,34 @@
             </div>
 
             <div class="input-box">
-                <input type="text" id="cell" placeholder="Celular" required/>
+                <input type="text" id="cell" placeholder="Celular" />
                 <i class='bx bxs-phone-call'></i>
             </div>
+            <span class="error-message" id="cell-error"></span>
 
             <div class="input-box">
-                <input type="text" id="enderess" placeholder="Endereço Completo" required/>
+                <input type="text" id="enderess" placeholder="Endereço Completo" />
                 <i class='bx bx-globe'></i>
             </div>
+            <span class="error-message" id="enderess-error"></span>
 
             <div class="input-box">
-                <input type="text" id="login" placeholder="Login" required maxlength="6"/>
+                <input type="text" id="login" placeholder="Login" />
                 <i class='bx bxs-log-in'></i>
             </div>
+            <span class="error-message" id="login-error"></span>
 
             <div class="input-box">
-                <input type="password" id="password" placeholder="Senha" required/>
+                <input type="password" id="password" placeholder="Senha" />
                 <i class='bx bxs-lock-alt' ></i>
             </div>
+            <span class="error-message" id="password-error"></span>
 
             <div class="input-box">
-                <input type="password" id="confirme_password" placeholder="Comfirme sua Senha" required/>
+                <input type="password" id="confirme_password" placeholder="Comfirme sua Senha" />
                 <i class='bx bxs-lock-alt' ></i>
             </div>
+            <span class="error-message" id="confirm-password-error"></span>
 
             <div class="input-btn">
                 <button type="submit" class="btn">Cadastrar</button>
@@ -93,5 +103,6 @@
     </div>
 
     <script src="/pages/cadastro.empresa/scriptl.js"></script>
+    <script src="/pages/cadastro.empresa/validaçao.js"></script>
 </body>
 </html>
