--- a/reciclei_original_app-master/pages/mapa/endmapa.html
+++ b/reciclei_original_app-master/pages/mapa/endmapa.html
@@ -24,12 +24,12 @@
                 <img src="/img/logo1.png" alt="logo">
             </a>
 
-             <nav class="navbar">
-                <a href="#home">Home</a>
-                <a href="#about">Sobre</a>
-                <a href="#menu">Menu</a>
-                <a href="#review">Avaliações</a>
-                <a href="#address">Endereço</a>
+            <nav class="navbar">
+                <a href="/index.html#home">Home</a>
+                <a href="/index.html#about">Sobre</a>
+                <a href="/index.html#menu">Menu</a>
+                <a href="/index.html#review">Avaliações</a>
+                <a href="/index.html#address">Endereço</a>
             </nav>
             <div class="icons">
                 <i class='bx bx-moon' id="theme-toggle"></i>
@@ -45,7 +45,7 @@
                 <i class='bx bx-menu'></i>
             </div>
             <nav>
-                <a class="login1" href="pages/login/login.html">Login</a>
+                <a class="login1" href="/pages/login/login.html">Login</a>
             </nav>
         </section>
     </header>
@@ -57,5 +57,6 @@
     
     
     <script src="/pages/mapa/mapa.js"></script>
+    <script src="/pages/mapa/navbar.js"></script>
 </body>
 </html>
