update: index, css

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     para te guiar em cada etapa do processo.</p>
                 <p>Junte-se a nós nessa jornada por um planeta mais limpo e sustentável. Juntos, podemos fazer a
                     diferença!</p>
-                <a href="#" class="btn">Teste seu conhecimento</a>
+                <a href="#" class="btn">Teste Seu Conhecimento <span class="spanseta"> ↘ </span></a>
             </div>
         </div>
     </section>
