projeto integrado com o back-end
POC

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <i class='bx bx-menu'></i>
             </div>
             <nav>
-                <a class="login1" href="pages/login/login.html">Login</a>
+                <a class="login1">Login</a>
             </nav>
         </section>
     </header>
@@ -54,7 +54,7 @@
             <div class="content">
                 <h3>Juntos Podemos Fazer a Diferença!</h3>
 
-                <a href="/pages/login/login.html" class="btn">Recicle Já!</a>
+                <a id="recicleJa" class="btn">Recicle Já!</a>
             </div>
         </section>
     </div>
@@ -113,7 +113,7 @@
                 <p>Você sabia que a reciclagem pode transformar o seu dia a dia?</p>
                 <p>Com nosso Mapa do Site, você tem acesso a tudo o que precisa para fazer a diferença! Explore conteúdos incríveis, dicas práticas e informações essenciais para se tornar um verdadeiro campeão da sustentabilidade.</p>
                 <p><sapn class="spanmap"> Clique aqui e embarque nessa jornada! O futuro do planeta está em suas mãos, e cada passo conta! Vamos juntos transformar o mundo? 🌿💚 </sapn></p>
-                    <a href="pages/mapa/endmapa.html" class="btn">Veja o Mapa!</a>
+                    <a href="pages/mapa/endmapa.html"  id="mape" class="btn">Veja o Mapa!</a>
                    
             </div>           
 
